@@ -1,0 +1,5 @@
+
+.. code-block:: bash
+    :caption: Visualize DAG
+
+    git dag -m 1 -R D..A
